<resources>
    <string name="app_name"> </string>
    <string name="view_terms_button">View all Terms</string>
    <string name="view_courses_button">Courses</string>
    <string name="view_mentors_button">Mentors</string>
    <string name="view_assessments_button">Assessments</string>
    <string name="add_a_new_term">Add a New Term</string>
    <string name="delete_this_term">Delete Term</string>
    <string name="name">Name</string>
    <string name="termName">Term Name</string>
    <string name="add_a_new_course">Add a New Course</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="courseName">Course Name</string>
    <string name="manageAssessments">Manage Assessments</string>
    <string name="manageMentors">Manage Mentors</string>
    <string name="notes">Notes</string>
    <string name="alert">Alert</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="addMentor">Add Mentor</string>
    <string name="notesName">Title</string>
    <string name="information">Information</string>
    <string name="addNotes">Add Notes</string>
    <string name="addAssessment">Add a New Assessment</string>
    <string name="assessmentName">Assessment Name</string>
    <string name="goalDate">Goal Date</string>
    <string name="mentorName">Mentor Name</string>
    <string name="mentor_phone_hint">1–800-227-1000</string>
    <string name="mentor_email_hint">example@wgu.edu</string>
    <string name="viewCourses">View Courses</string>
    <string name="manageAssessmentsCourses">Manage Courses</string>
    <string name="notesTitle">NOTE</string>
    <string name="delete_button">Delete</string>
    <string name="type_of_assessment">Type of Assessment</string>
    <string name="date_of_assessment">Date of Assessment</string>
    <string name="assessments">ASSESSMENTS</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="status">Status</string>
    <string name="mentor_information">Mentor Information</string>
    <string name="courses">COURSES</string>
    <string name="performance_assessment_abm1">Performance Assessment ABM1</string>
    <string name="a_student_progress_tracking_application">A student progress tracking application</string>
    <string name="c196_mobile_application_development">C196 - Mobile Application Development</string>
    <string name="start">Start</string>
    <string name="share_note">SHARE NOTE</string>
    <string name="terms">TERMS</string>
</resources>
