<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top|center_vertical"
    android:orientation="vertical"
    tools:context=".NotesActivity">

    <Button
        android:id="@+id/btnNotesSave"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="right"
        android:background="@color/colorAccent"
        android:onClick="saveNote"
        android:text="@string/save"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingTop="20dp"
        android:text="@string/notesTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/ptNotesName"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/notesName"
        android:inputType="text"
        android:textAlignment="center" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNotesMultiText"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/information"
                android:inputType="textMultiLine"
                android:textAlignment="center" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>